Trying to do fix Dropdown menue fix when running native image exe.